docker/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buildingos
  labels:
    name: buildingos
    environment: production
